src/snapshots/tests__fof_unitary_formula.snap
---
source: src/tests.rs
expression: parsed
---
Parenthesised(
    Unitary(
        Atomic(
            Defined(
                Plain(
                    FofDefinedPlainFormula(
                        Constant(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
