src/snapshots/tests__fof_variable_list-3.snap
---
source: src/tests.rs
expression: parsed
---
FofVariableList(
    [
        Variable(
            UpperWord(
                "X",
            ),
        ),
        Variable(
            UpperWord(
                "Y",
            ),
        ),
    ],
)
