src/snapshots/tests__fof_variable_list-5.snap
---
source: src/tests.rs
expression: parsed
---
FofVariableList(
    [
        Variable(
            UpperWord(
                "X",
            ),
        ),
        Variable(
            UpperWord(
                "Y",
            ),
        ),
        Variable(
            UpperWord(
                "Z",
            ),
        ),
    ],
)
