src/snapshots/tests__formula_data-3.snap
---
source: src/tests.rs
expression: parsed
---
Cnf(
    Disjunction(
        Disjunction(
            [
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
