src/snapshots/tests__formula_data-5.snap
---
source: src/tests.rs
expression: parsed
---
Fot(
    Function(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "t",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
