src/snapshots/tests__formula_data.snap
---
source: src/tests.rs
expression: parsed
---
Fof(
    Logic(
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
