src/snapshots/tests__general_data-7.snap
---
source: src/tests.rs
expression: parsed
---
Formula(
    Fof(
        FofFormula(
            Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
