src/snapshots/tests__general_function.snap
---
source: src/tests.rs
expression: parsed
---
GeneralFunction {
    word: Lower(
        LowerWord(
            "atomic",
        ),
    ),
    terms: GeneralTerms(
        [
            Data(
                Variable(
                    Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                ),
            ),
        ],
    ),
}
