src/snapshots/tests__general_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Data(
    Formula(
        Fof(
            Logic(
                Unitary(
                    Atomic(
                        Plain(
                            FofPlainAtomicFormula(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
